--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "axios": "^0.23.0",
+    "@nuxtjs/color-mode": "^2.1.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
